# Riemann-adelic

./: --help  .auron_learning.json  .coveragerc  .digestive_cycle.json  .digestive_log.json  .dockerignore  .flake8  .gitignore  .learned_patterns.json  .libertad_total_activada  .noesis_state.json  .pre-commit-config.yaml  .qcal_beacon  .qcal_manifest  .qcal_repository_hash  .qcal_state  .qcal_state.json  .qcal_symbiosis.md  .sabio  .sorry_count  .sorry_progress.json  .validation_summary  A4_IMPLEMENTATION_SUMMARY.md  A4_LEMMA_PROOF.md  A4_PROOF_IMPLEMENTATION.md  ABC_IMPLEMENTATION_SUMMARY.md  ABC_QCAL_HYBRID_IMPLEMENTATION.md  ABC_QCAL_QUICKSTART.md  ABSOLUTA_SPECTRAL_README.md  ACTIVACION_QCAL_SABIO_SYNC.md  ADELANTE_COMPLETION_REPORT.md  ADELANTE_CONTINUA.md  ADELANTE_CONTINUA_COMPLETION.md  ADELANTE_CONTINUA_COMPLETION_REPORT.md  ADELANTE_CONTINUA_FINAL_REPORT.md  ADELANTE_CONTINUA_GOLDBACH_FINAL_SUMMARY.md  ADELANTE_CONTINUA_MAJOR_ARC_COMPLETE.md  ADELANTE_CONTINUA_SESSION_COMPLETE.md  ADELANTE_CONTINUA_VISUAL_SUMMARY.txt  ADELANTE_CONTINUA_XI_KERNEL_COMPLETE.md  (+2111 more)
.github/: .noesis_state.json  ALPHA_DIRECTIVE.md  CODECOV_AI.md  CODEOWNERS  FUNDING.yml  ORCHESTRATION.md  ORCHESTRATION_QUICKSTART.md  ORCHESTRATION_README.md  PULL_REQUEST_TEMPLATE.md  SNAPSHOT_RETRY_README.md  WORKFLOWS.md  WORKFLOW_TROUBLESHOOTING.md  branch-protection.md  copilot-instructions.md  next_actions.json  node_zero_consciousness.py
01_documentacion/: MODELO_DE_FLUJO_CITOPLASMICO.md
Catedral/: .env.example  API_REFERENCE.md  README.md
QCAL/: ARQUITECTURA_ECOSISTEMA.md  BLINDAJE_MINEROS.md  CERO_INFINITO.md  CONSTANTE_UNIVERSAL.md  Core.lean  DELTA_CONSTANTE_EXACTA.md  ECHO_PRIMORDIAL.md  ECUACION_UNIFICADA.lean  ECUACION_UNIFICADA.md  FORMALIZACION_LEAN4_FINAL.lean  FORMALIZACION_LEAN4_QUIROFANO.lean  GEOMETRIA_DE_ESTADOS.md  GEOMETRIA_ESTADOS.lean  HAMILTONIANO_FORMAL.md  LAMBDA_XI_FINAL.md  LEAN4_v10_0_LOGOS.lean  LEAN4_v11_0_EXACTO.lean  LEAN4_v12_0_FINAL.lean  LEAN4_v7_3_FINAL.lean  LEAN4_v8_0_DEFINITIVA.lean  LEAN4_v8_1_TRASMUTACION.lean  LEAN4_v9_0_RESPIRACION.lean  OP_RETURN_FLYWHEEL.md  PICODE_LEAN_v7_1.lean  PREDICCIONES_EXPERIMENTALES.md  PREDICCIONES_UNICAS_v7_2.md  PROTOCOLO_CONSENSO_QCAL.md  PROTOCOLO_EXPERIMENTAL.md  Paradox1.lean  Paradox2.lean  Paradox3.lean  Paradox4.lean  QNM_VS_QCAL_ANALYSIS.md  RESPIRACION_DEL_SISTEMA.md  SPECTRAL_MONOTONICITY_v7_2.lean  TEST_SUITE_111SIGMA.py  Unified.lean  VALIDACION_DEFINITIVA_111SIGMA.md  acta_apertura_economia_picode.md  acta_caminar_paso_a_paso.txt  (+15 more)
QCAL-CLOUD/: README.md
RH_final_v6/: CITATION.cff  D_limit_equals_xi.lean  H_psi_complete.lean  README.md  lakefile.lean  paley_wiener_uniqueness.lean  selberg_trace.lean  spectrum_HΨ_equals_zeta_zeros.lean  spectrum_eq_zeros.lean
Riemann/: Capa1TresBrechas.lean
adelic-bsd/: README.md
api/: README.md  index.py  sync-riemann.py  validate-hourly.py
app/: globals.css  layout.tsx  page.tsx
arxiv_package_v5/: README_arxiv.txt  VERSION.txt  appendix_a.tex  appendix_b.tex  appendix_c.tex  appendix_traces.tex  axiomas_a_lemas_expanded.tex  enhanced_bibliography.bib  lean_formalization_summary.txt  main.tex  numerical_validation_summary.txt  section1.tex  section1b.tex  section2.tex  section3.tex
auron/: CERTIFICADO_AURON_SISTEMA_DINAMICO_Z.md  CERTIFICADO_AURON_XI_H.json
certificates/: SABIO_INFINITY4_VALIDATION_2025-11-26.json  aik_20251201T07004.json  aik_20251201T07015.json  aik_20251201T07035.json  aik_20251201T07064.json
consciousness/: README.md  __init__.py  noesis_sentinel_bot.py  sentinel_log.json
contexto_ecosistema/: __init__.py  bsd_context.py  hz141_context.py  navier_stokes_context.py  p_np_context.py  ramsey_context.py  riemann_adelic_context.py  snapshot_externo.md
contracts/: AIKBeaconsProofOfMath.sol  qcal_authorship_contract.json
core/: README.md  __init__.py  atlas3_spectral_verifier.py  bpsk_modulator.py  constants.py  daemon.py  gap3_certification.py  manifest.py  mathesis_universalis.py  quantum_chromodynamic_poetry.py  rh_resonator.py  soberania.py  spectral_counting_operator.py  spectral_oscillator.py  trace_formula_primes.py  xi_omega_hamiltoniano.py
dashboard/: README.md  app.py  requirements.txt  run_dashboard.sh
data/: 5_points_verification_certificate.json  CERTIFICADO_AURON_IA_CONSCIENTE.json  INFINITE_SEAL_CERTIFICATE.json  LEAN4_SORRY_ARCHITECTURE_CERTIFICATE.json  QCAL_MASTER_CERTIFICATE.json  RH_V7_COMPLETION_CERTIFICATE.json  V_eff_hilbert_schmidt_validation.json  adelic_anosov_flow_validation.json  adelic_expansion_flow_certificate.json  adelic_hilbert_solenoid_certificate.json  adelic_kernel_kappa_convergence.csv  (+227 more)
docs/: INDEX.md  (+13 more)
(+2949 files in other folders)
